# my_scripts

./: .pdm-python  README.md  ToDo  main  main.py  my_clis.py  pyproject.toml
cli_scripts/: base_cli.py  cli_inquirer.py  config_loader.py  timer.py
cli_scripts/clis/: pomodoro.py  timer.py  track_debt.py  track_expense.py  track_food.py
cli_scripts/tracker/finances/: debt_tracker.py  expense_tracker.py
cli_scripts/tracker/health/: food_tracker.py
clis/: base.py  cli_pomodoro.py  cli_timer.py
configs/: databases.yml  general.yml  my_paths.yml
examples/: debt.csv  expenses.csv  my_aliases.yml  my_paths.yml  periodic_debt.yml
scripts/: create_aliases  timer.py
src/: cli_inquirer.py  config_loader.py  db_path_loader.py  path_loader.py
src/clis/: pomodoro.py  timer.py  track_debt.py  track_expense.py
src/tracker/finances/: debt_tracker.py  expense_tracker.py
src/utilitys/: timer.py
